--- a/src/components/capabilities/Capabilities.css
+++ b/src/components/capabilities/Capabilities.css
@@ -90,3 +90,51 @@
   letter-spacing: 0.1875px;
   color: #48555b;
 }
+
+/*=======================================  (MEDIUM DEVICES) ==========================*/
+
+@media screen and (max-width: 1024px) {
+  .capabilities {
+    padding: 15px;
+  }
+
+  .capabilities__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .capabilities__item__line {
+    display: block;
+    margin: auto;
+  }
+
+  .capabilities__item__subtitle {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .capabilities__item__subtitle__text {
+    padding-top: 10px;
+  }
+
+  .capabilities__item__subtitle__btn {
+    margin-top: 15px;
+  }
+
+  .capabilities__box {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+/*=======================================  (SMALL DEVICES) ==========================*/
+
+@media screen and (max-width: 600px) {
+  .capabilities__item__subtitle__text {
+    text-align: center;
+  }
+}
